# TechDebt-cli

./: .gitignore  .techdebt.yml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: tech-debt-report.yml
src/techdebt_cli/: __init__.py  __main__.py  config.py  renderer.py  scanner.py  scoring.py  signals.py  utils.py
src/techdebt_cli/templates/: report.md.j2
